<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinect2_bridge</name>
  <version>0.0.1</version>
  <description>The kinect2_bridge package</description>

  <author email="wiedemeyer@informatik.uni-bremen.de">Thiemo Wiedemeyer</author>
  <maintainer email="wiedemeyer@informatik.uni-bremen.de">Thiemo Wiedemeyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>compressed_depth_image_transport</build_depend>
  <build_depend>kinect2_registration</build_depend>
  <build_depend>libfreenect2</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>image_pipeline</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <!--<nodelet plugin="${prefix}/nodelet_plugins.xml" />-->
  </export>
</package>
