<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinect2_registration</name>
  <version>0.0.1</version>
  <description>The kinect2_registration package</description>

  <author email="wiedemeyer@informatik.uni-bremen.de">Thiemo Wiedemeyer</author>
  <maintainer email="wiedemeyer@informatik.uni-bremen.de">Thiemo Wiedemeyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>libomp-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
